# 4-stage

./: LICENSE  README.md  index.html  llms.txt  pyproject.toml  styles.css
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  agent-card.json
examples/: runtime_demo.py
src/sovereign_runtime/: __init__.py  cli.py  core.py
src/sovereign_runtime/agent/: __init__.py  planner.py  runtime.py  tool_registry.py
src/sovereign_runtime/anchors/: __init__.py  ledger.py
src/sovereign_runtime/anchors/defaults/: consent.yaml  derivative.yaml  harm.yaml  provenance.yaml
src/sovereign_runtime/api/: __init__.py
src/sovereign_runtime/coherence/: __init__.py  embodiment_gate.py  fracture.py  pst.py  utct.py
src/sovereign_runtime/common/: __init__.py  exceptions.py  types.py
src/sovereign_runtime/permission/: __init__.py  classes.py  gate.py  policies.py
src/sovereign_runtime/qgate/: __init__.py  continuity.py  q_gate.py
src/sovereign_runtime/realization/: __init__.py  dominance.py  r_operator.py
src/sovereign_runtime/receipts/: __init__.py  generator.py  schema.py  verifier.py
src/sovereign_runtime/records/: __init__.py  bundle.py  log.py
tests/: test_completed_packages.py  test_runtime_core.py
