[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtti-sovereign-agent-runtime"
version = "0.1.0"
description = "Sovereign agent runtime with receipts, permission gates, coherence checks, and audit logs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - MT Tech Industries LLC"}
authors = [{name = "MT Tech Industries LLC"}]
dependencies = [
  "pydantic>=2.0",
  "click>=8.1",
  "rich>=13.0",
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "pyyaml>=6.0",
  "orjson>=3.9"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "mypy>=1.6", "ruff>=0.1", "black>=23.0"]

[project.scripts]
sovereign = "sovereign_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
